# fake_plss

./: .gitignore  README.md  pyproject.toml
dataset_gen/: _lorem_ipsum.py  dataset_gen.py
