[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake_plss"
version = "0.0.1"
description = "Generate dummy PLSS land descriptions."
dependencies = []

[project.urls]
Homepage = "https://github.com/JamesPImes/fake_plss"
Repository = "https://github.com/JamesPImes/fake_plss.git"